Added fuel and electricity data. Changed data to changed over 2 months instead of real value. Tuned SARIMAX and XGBoost

--- a/src/Data Collection.ipynb
+++ b/src/Data Collection.ipynb
@@ -6,14 +6,15 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-03T23:38:37.607581Z",
-     "start_time": "2024-11-03T23:38:37.595219Z"
+     "end_time": "2024-11-10T00:49:55.502484Z",
+     "start_time": "2024-11-10T00:49:55.268288Z"
     }
    },
    "source": [
     "import pandas as pd\n",
     "import requests as r\n",
     "import matplotlib.pyplot as plt\n",
+    "from datetime import datetime\n",
     "import plotly.express as px\n",
     "import plotly.graph_objs as go\n",
     "import numpy as np\n",
@@ -22,11 +23,11 @@
     "import os\n"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 50
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "plot_folder = '/Users/eddie/cs163/src/Plots'\n",
@@ -39,8 +40,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-03T23:38:37.630894Z",
-     "start_time": "2024-11-03T23:38:37.611201Z"
+     "end_time": "2024-11-09T23:30:42.483862Z",
+     "start_time": "2024-11-09T23:30:42.479209Z"
     }
    },
    "id": "7c2937516baa85ba"
@@ -2224,6 +2225,110 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Energy (Fuel + Electricity) Price"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9c5c435ecabd972c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "outputs": [],
+   "source": [
+    "gas_url = 'https://api.eia.gov/v2/petroleum/pri/gnd/data/?frequency=monthly&data[0]=value&facets[product][]=EPM0&facets[duoarea][]=NUS&start=2005-01&sort[0][column]=period&sort[0][direction]=desc&offset=0&length=5000&api_key=0JPwzcm4upaXA5MTfVi2eAwIHU6r5agCivKMo0GR'\n",
+    "electricity_url = 'https://api.eia.gov/v2/electricity/retail-sales/data/?frequency=monthly&data[0]=price&facets[stateid][]=US&facets[sectorid][]=COM&facets[sectorid][]=IND&facets[sectorid][]=TRA&start=2005-01&sort[0][column]=sectorid&sort[0][direction]=desc&offset=0&length=5000&api_key=0JPwzcm4upaXA5MTfVi2eAwIHU6r5agCivKMo0GR'\n",
+    "\n",
+    "dfs = []\n",
+    "for link in [gas_url, electricity_url]: \n",
+    "    html = r.get(link)\n",
+    "    json = html.json()\n",
+    "    dfs.append(pd.DataFrame(json['response']['data']))\n",
+    "\n",
+    "energy_df = dfs[0].merge(dfs[1], on='period')\n",
+    "energy_df = energy_df[['period', 'value', 'price', 'sectorName']]\n",
+    "energy_df.columns = ['DATE', 'Gas Price', 'Electricity Price', 'Electricity Sector']\n",
+    "energy_df = energy_df.pivot_table(index=['DATE', 'Gas Price'], columns=['Electricity Sector'], values='Electricity Price', aggfunc='sum').reset_index()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-10T00:54:20.843560Z",
+     "start_time": "2024-11-10T00:54:18.033112Z"
+    }
+   },
+   "id": "db9a31e5ba604622"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "outputs": [],
+   "source": [
+    "def EIA_time_decode(x):\n",
+    "    year = x.split('-')[0]\n",
+    "    month = x.split('-')[1]\n",
+    "    time = datetime(year=int(year), month=int(month), day=1)\n",
+    "    return time\n",
+    "\n",
+    "energy_df['DATE'] = energy_df['DATE'].apply(lambda x: EIA_time_decode(x))\n",
+    "energy_df.set_index('DATE', inplace=True)\n",
+    "energy_df.columns = ['Gas Price', 'Commercial Electricity Price', 'Industrial Electricity Price', 'Transportation Electricity Price']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-10T00:54:31.536480Z",
+     "start_time": "2024-11-10T00:54:31.358940Z"
+    }
+   },
+   "id": "619e24ffd60f8333"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "outputs": [],
+   "source": [
+    "energy_df.to_csv(os.path.join(data_folder, 'Fuel_and_Electricity_price.csv'))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-10T00:55:25.428633Z",
+     "start_time": "2024-11-10T00:55:25.148516Z"
+    }
+   },
+   "id": "9180095117e03258"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "           DATE  Gas Price  Commercial Electricity Price  \\\n0    2005-01-01      1.875                          7.99   \n1    2005-02-01      1.953                          8.19   \n2    2005-03-01      2.120                          8.15   \n3    2005-04-01      2.285                          8.25   \n4    2005-05-01      2.205                          8.41   \n..          ...        ...                           ...   \n231  2024-04-01      3.733                         12.63   \n232  2024-05-01      3.725                         12.48   \n233  2024-06-01      3.576                         13.07   \n234  2024-07-01      3.600                         13.58   \n235  2024-08-01      3.507                         13.39   \n\n     Industrial Electricity Price  Transportation Electricity Price  \n0                            5.23                              7.91  \n1                            5.26                              8.14  \n2                            5.30                              8.01  \n3                            5.31                              8.30  \n4                            5.42                              8.23  \n..                            ...                               ...  \n231                          7.77                             12.43  \n232                          7.88                             12.21  \n233                          8.40                             12.74  \n234                          8.81                             13.15  \n235                          8.72                             13.18  \n\n[236 rows x 5 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>DATE</th>\n      <th>Gas Price</th>\n      <th>Commercial Electricity Price</th>\n      <th>Industrial Electricity Price</th>\n      <th>Transportation Electricity Price</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2005-01-01</td>\n      <td>1.875</td>\n      <td>7.99</td>\n      <td>5.23</td>\n      <td>7.91</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2005-02-01</td>\n      <td>1.953</td>\n      <td>8.19</td>\n      <td>5.26</td>\n      <td>8.14</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2005-03-01</td>\n      <td>2.120</td>\n      <td>8.15</td>\n      <td>5.30</td>\n      <td>8.01</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2005-04-01</td>\n      <td>2.285</td>\n      <td>8.25</td>\n      <td>5.31</td>\n      <td>8.30</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2005-05-01</td>\n      <td>2.205</td>\n      <td>8.41</td>\n      <td>5.42</td>\n      <td>8.23</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>231</th>\n      <td>2024-04-01</td>\n      <td>3.733</td>\n      <td>12.63</td>\n      <td>7.77</td>\n      <td>12.43</td>\n    </tr>\n    <tr>\n      <th>232</th>\n      <td>2024-05-01</td>\n      <td>3.725</td>\n      <td>12.48</td>\n      <td>7.88</td>\n      <td>12.21</td>\n    </tr>\n    <tr>\n      <th>233</th>\n      <td>2024-06-01</td>\n      <td>3.576</td>\n      <td>13.07</td>\n      <td>8.40</td>\n      <td>12.74</td>\n    </tr>\n    <tr>\n      <th>234</th>\n      <td>2024-07-01</td>\n      <td>3.600</td>\n      <td>13.58</td>\n      <td>8.81</td>\n      <td>13.15</td>\n    </tr>\n    <tr>\n      <th>235</th>\n      <td>2024-08-01</td>\n      <td>3.507</td>\n      <td>13.39</td>\n      <td>8.72</td>\n      <td>13.18</td>\n    </tr>\n  </tbody>\n</table>\n<p>236 rows × 5 columns</p>\n</div>"
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "energy_df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-10T00:58:54.243200Z",
+     "start_time": "2024-11-10T00:58:54.025278Z"
+    }
+   },
+   "id": "64ecd1188af21d7b"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### Combine Dataset"
    ],
    "metadata": {
@@ -2233,41 +2338,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 68,
    "outputs": [],
    "source": [
     "PPI_CPI_data = pd.read_csv(os.path.join(data_folder, 'BLS_Data.csv'))\n",
     "salary_data = pd.read_csv(os.path.join(data_folder, 'BLS_salary.csv'))\n",
-    "df_price_received = pd.read_csv(os.path.join(data_folder, 'RPI.csv'))"
+    "df_price_received = pd.read_csv(os.path.join(data_folder, 'RPI.csv'))\n",
+    "energy_df = pd.read_csv(os.path.join(data_folder, 'Fuel_and_Electricity_price.csv'))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-03T23:38:53.935955Z",
-     "start_time": "2024-11-03T23:38:53.927405Z"
+     "end_time": "2024-11-10T00:55:55.600683Z",
+     "start_time": "2024-11-10T00:55:55.393179Z"
     }
    },
    "id": "a074fa44f655f0c9"
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 69,
    "outputs": [],
    "source": [
-    "final = pd.merge(PPI_CPI_data, salary_data, on='DATE', how='left').merge(df_price_received, on='DATE')"
+    "final = pd.merge(PPI_CPI_data, salary_data, on='DATE', how='left').merge(df_price_received, on='DATE').merge(energy_df, on='DATE')\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-03T23:38:53.941613Z",
-     "start_time": "2024-11-03T23:38:53.935350Z"
+     "end_time": "2024-11-10T00:56:24.926446Z",
+     "start_time": "2024-11-10T00:56:24.633769Z"
     }
    },
    "id": "7153d1a5be33bf5c"
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 70,
    "outputs": [],
    "source": [
     "final.to_csv(os.path.join(data_folder, 'final.csv'), index=False)"
@@ -2275,8 +2381,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-03T23:38:53.952434Z",
-     "start_time": "2024-11-03T23:38:53.940717Z"
+     "end_time": "2024-11-10T00:56:27.626996Z",
+     "start_time": "2024-11-10T00:56:27.596366Z"
     }
    },
    "id": "c50aca3d7ed9f72e"
