Update web sources

--- a/src/Notebooks/Data Analysis and Models.ipynb
+++ b/src/Notebooks/Data Analysis and Models.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-12T00:17:03.026603Z",
-     "start_time": "2024-11-12T00:16:58.564956Z"
+     "end_time": "2024-11-20T06:44:20.405760Z",
+     "start_time": "2024-11-20T06:44:02.736726Z"
     }
    },
    "outputs": [],
@@ -67,8 +67,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-12T00:17:03.095824Z",
-     "start_time": "2024-11-12T00:17:03.027186Z"
+     "end_time": "2024-11-20T06:44:20.466068Z",
+     "start_time": "2024-11-20T06:44:20.403835Z"
     }
    },
    "id": "a2c5ad36dc5e5d56"
@@ -126,8 +126,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-12T00:17:03.123029Z",
-     "start_time": "2024-11-12T00:17:03.096932Z"
+     "end_time": "2024-11-20T06:44:20.481911Z",
+     "start_time": "2024-11-20T06:44:20.466503Z"
     }
    },
    "id": "eee8622793070959"
@@ -143,8 +143,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-12T00:17:03.129621Z",
-     "start_time": "2024-11-12T00:17:03.122279Z"
+     "end_time": "2024-11-20T06:44:20.487617Z",
+     "start_time": "2024-11-20T06:44:20.482467Z"
     }
    },
    "id": "bb4b0679b3ebec49"
@@ -168,8 +168,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-12T00:17:03.131169Z",
-     "start_time": "2024-11-12T00:17:03.126285Z"
+     "end_time": "2024-11-20T06:44:20.515876Z",
+     "start_time": "2024-11-20T06:44:20.486506Z"
     }
    },
    "id": "3d02e91b92bf82cf"
@@ -219,11 +219,55 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-12T00:17:03.189124Z",
-     "start_time": "2024-11-12T00:17:03.158396Z"
+     "end_time": "2024-11-20T06:44:20.555715Z",
+     "start_time": "2024-11-20T06:44:20.499479Z"
     }
    },
    "id": "f49a4c8399e899b"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "mean_out_X = mean_only_X\n",
+    "mean_out_X['PPI'] = mean_index(X.iloc[:,:6], 'PPI')\n",
+    "mean_out_X.to_csv(os.path.join(data_folder, 'mean_only_data.csv'))\n",
+    "diff_y.to_csv(os.path.join(data_folder, 'Diff_CPI.csv'))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-20T08:14:34.984382Z",
+     "start_time": "2024-11-20T08:14:34.814995Z"
+    }
+   },
+   "id": "435734cde97d8235"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "pandas.core.series.Series"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(diff_y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-20T08:13:59.623796Z",
+     "start_time": "2024-11-20T08:13:59.452366Z"
+    }
+   },
+   "id": "526694036debd38c"
   },
   {
    "cell_type": "code",
